fixes contrast issues

--- a/public/stylesheets/usergames.css
+++ b/public/stylesheets/usergames.css
@@ -64,7 +64,7 @@ nav > a {
 }
 
 nav > a:visited {
-  color: #329900;
+  color: #01009a;
 }
 
 nav > a:hover {
